feat: rabbitmq async email verification
